kubernetes/matrix/database.yml
apiVersion: v1
kind: Service
metadata:
  name: synapse-db
spec:
  selector:
    app: synapse-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse-db
spec:
  selector:
    matchLabels:
      app: synapse-db
  serviceName: synapse-db
  replicas: 1
  template:
    metadata:
      labels:
        app: synapse-db
    spec:
      containers:
        - name: synapse-db
          image: postgres:13.2-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgresdata
            - name: init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init
          configMap:
            name: db-init
            defaultMode: 0755
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: longhorn
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 30Gi
